# fhv-hackathon

./: .gitignore  README.txt
backend/: README.md  api.py  pyproject.toml
frontend/: README.md
model/: README.txt  cvd_model_bundle.joblib  prepare_data.ipynb  pyproject.toml  train.ipynb
model-death/: README.md  build_real_model.py  calibration.py  column_model_spec.py  cvd_death_model.joblib  data_loading.py  model.py  mortality_cohort.py  pyproject.toml
