[project]
name = "model-death-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.5.20",
    "flask>=3.1.3",
    "joblib>=1.5.3",
    "lifelines==0.30.3",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "scikit-survival==0.27.0",
]
