[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "shap>=0.52.0",
    "tables>=3.11.1",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
